force-app/main/default/objects/Store_Location_Config__mdt/Store_Location_Config__mdt.object-meta.xml
<CustomObject>
    <label>Store Location Config</label>
    <pluralLabel>Store Location Config</pluralLabel>
</CustomObject>