force-app/main/default/objects/Store_Location_Config__mdt/fields/New_Boat_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>New_Boat_Disclaimer__c</fullName>
    <label>New Boat Disclaimer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>