force-app/main/default/objects/Store_Location_Config__mdt/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>