force-app/main/default/objects/Store_Location_Config__mdt/fields/Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee__c</fullName>
    <label>Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>