force-app/main/default/objects/Store_Location_Config__mdt/fields/Used_Boat_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Used_Boat_Disclaimer__c</fullName>
    <label>Used Boat Disclaimer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>