force-app/main/default/objects/Store_Location_Config__mdt/fields/Website_Store_location__c.field-meta.xml
<CustomField>
    <fullName>Website_Store_location__c</fullName>
    <label>Website Store location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>